SimpleComplex/Database 1.x, 2018-08-06
--------------------------------------
- MsSql query validate native out-parameters.
- MsSql query parameter validation check for int out of bigint range.
- Query option validate_params renamed; from validate_arguments.
- Query validate parameters on query execution failure; validate_params:1.

SimpleComplex/Database 1.x, 2018-08-05
--------------------------------------
- Query argument object stringification: MySQLi attempts to stringify even when
  no __toString() method, whereas Sqlsrv only stringifies \DateTime.
- Query option 'name'.
- Query use own messagePrefix() method.
- MsSql query do validate type qualified arguments, not original un-typed.

SimpleComplex/Database 1.x, 2018-08-04
--------------------------------------
- MsSql query support arguments actual type checking, even for later
  prepared statement executions.
- MariaDb query support arguments actual type checking, even for later
  prepared statement executions.
- MsSql query shan't err on first typed argument failing type validation,
  but continue until all args are validated.

SimpleComplex/Database 1.x, 2018-08-03
--------------------------------------
- Unit test query arguments: simple referred, update bucket in indexed list,
  update bucket in assoc. keyed list.
- Query method argumentsInvalid() renamed; from parameterTypesCheck().
- Query option validate_arguments.
- MsSql doesn't need support for more type chars (t ~ datetime, n ~ nvarchar),
  because Sqlsrv handles DateTime transparently (stringifying when for varchar)
  and nvarchar may be handled with type qualifying argument array (only needed
  when the parameter is to be used in a sql where clause, anyway).
- Query auto-stringable classes.
- MsSql Query support mixture of type qualified and un-qualified arguments.

SimpleComplex/Database 1.x, 2018-07-29
--------------------------------------
- MariaDbClient secure databaseInfo flags now that parent DbClient passes all