@@ -130,7 +130,7 @@ $somebody = $client->query('SELECT * FROM person WHERE personId > ? AND personId
 // Get all rows, using a simple statement, and list them by 'personId' column --
 $everybody = $client->query('SELECT * FROM person')
     ->execute()
-    ->fetchAll(Database::FETCH_ASSOC, ['list_by_column' => 'personId']));
+    ->fetchAll(DbResult::FETCH_ASSOC, ['list_by_column' => 'personId']));
 ```
 
 ### MS SQL ###
@@ -212,7 +212,7 @@ $somebody = $client->query('SELECT * FROM person WHERE personId > ? AND personId
 // Get all rows, using a simple statement, and list them by 'personId' column --
 $everybody = $client->query('SELECT * FROM person')
     ->execute()
-    ->fetchAll(Database::FETCH_ASSOC, ['list_by_column' => 'personId']));
+    ->fetchAll(DbResult::FETCH_ASSOC, ['list_by_column' => 'personId']));
 ```
 
 ## Requirements ##
