@@ -392,7 +392,7 @@ class MariaDbClient extends DbClient
      * @see DbClient::formatNativeErrors()
      *
      * @param int $toString
-     *      1: on no error returns message indication just that.
+     *      1: on no error returns message indicating no error.
      *      2: on no error return empty string.
      *
      * @return array|string
