@@ -1,3 +1,9 @@
+SimpleComplex/Database 1.x, 2018-08-07
+--------------------------------------
+- Moved FETCH_* constants to DbResult, from class Database.
+- Moved error-as-string constants to DbError, from class Database.
+- Removed obsolete class Database.
+
 SimpleComplex/Database 1.x, 2018-08-06
 --------------------------------------
 - MsSql query validate native out-parameters.
